[project]
name = "q2-annotate"
authors = [
    { name = "Michal Ziemski, Keegan Evans", email = "ziemski.michal@gmail.com" }
]
description = "QIIME 2 plugin for metagenome analysis."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/bokulich-lab/q2-annotate"
Repository = "https://github.com/bokulich-lab/q2-annotate"

[project.entry-points.'qiime2.plugins']
"q2-annotate" = "q2_annotate.plugin_setup:plugin"

[build-system]
requires = [
    "setuptools",
    "versioningit",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git-archive"
describe-subst = "$Format:%(describe)$"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "q2_annotate/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["q2_annotate*"]

[tool.setuptools.package-data]
q2_annotate = ["**/*"]
